bk_ida/gccida/c1/noce_try_abs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1873:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1873:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1878:4: error: expected ';' after expression
rtx earliest; // [rsp+10h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1878:5: error: use of undeclared identifier 'earliest'
rtx earliest; // [rsp+10h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1901:54: error: use of undeclared identifier 'earliest'
alt_condition = noce_get_alt_condition( if_info, a, &earliest); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1906:23: error: expected identifier or '('
 struct pool_constant = ( rtx)v8[1]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1916:2: error: expected expression
 struct pool_constant = get_pool_constant( rtx); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1918:30: error: expected ')'
if ( (  struct pool_constant != const_int_rtx[63] || *( _WORD *)v8 != 105) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1918:6: note: to match this '('
if ( (  struct pool_constant != const_int_rtx[63] || *( _WORD *)v8 != 105) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1919:4: error: expected identifier
&& (  struct pool_constant != const_int_rtx[65] || *( _WORD *)v8 != 107) 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1938:29: error: use of undeclared identifier 'machine_mode'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)if_info->x + 2), ABS, a, if_info->x, 0); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1938:1: error: use of undeclared identifier 'v19'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)if_info->x + 2), ABS, a, if_info->x, 0); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1939:12: error: use of undeclared identifier 'v19'
if ( v5 && v19 ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1940:29: error: use of undeclared identifier 'machine_mode'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)v19 + 2), NEG, v19, if_info->x, 0); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1940:65: error: use of undeclared identifier 'v19'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)v19 + 2), NEG, v19, if_info->x, 0); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1940:80: error: use of undeclared identifier 'v19'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)v19 + 2), NEG, v19, if_info->x, 0); 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1940:1: error: use of undeclared identifier 'v19'
v19 = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)v19 + 2), NEG, v19, if_info->x, 0); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1941:6: error: use of undeclared identifier 'v19'
if ( v19 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1944:6: error: use of undeclared identifier 'v19'
if ( v19 != x ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/ifcvt.c:1945:25: error: use of undeclared identifier 'v19'
noce_emit_move_insn( x, v19); 
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_try_abs/src/obj/ifcvt.o] Error 1
